--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,61 @@
-/*  your css code here. If applicable */
+table {
+            border-collapse: collapse;
+            border: 1px solid black;
+            width: 100%;
+        }
+
+        th, td {
+            border: 1px solid black;
+            padding: 1px;
+            text-align: left;
+        }
+#table-2{
+	td{
+		height:10px;
+	}
+}
+
+        .middle {
+            margin: 0 auto;
+        }
+
+#table-1 td:first-child {
+            text-align: left;
+        }
+
+        #table-1 td:nth-child(2) {
+            text-align: center;
+        }
+
+        #table-1 td:last-child {
+            text-align: right;
+        }
+
+        /* Set each column to be equally spaced */
+        #table-3 td {
+            width: 33.33%;
+        }
+
+        /* Ensure the image fills the cell */
+        #t-image img {
+            width: 100%;
+            height: auto;
+            display: block;
+        }
+
+        /* Background color styling */
+        .green {
+            background-color: green;
+					height:10px;
+        }
+
+        .blue {
+            background-color: blue;
+			height:10px;
+
+        }
+
+        /* Center alignment for heading */
+        h1 {
+            text-align: center;
+        }
