--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 table {
             border-collapse: collapse;
-            border: 1px solid black;
+            border: 1px,solid,black;
             width: 100%;
         }
 
         th, td {
-            border: 1px solid black;
+            border: 1px,solid,black;
             padding: 1px;
             text-align: left;
         }
