--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+#tabel-1{
+	    border: 1px,solid,black;
+}
+
 table {
             border-collapse: collapse;
             border: 1px,solid,black;
