--- a/styles.css
+++ b/styles.css
@@ -1,65 +1,63 @@
-#tabel-1{
-	    border: 1px solid rgb(0, 0, 0);
-}
-
+/* Style for the form container */
 table {
-            border-collapse: collapse;
-            border: 1px,solid,black;
-            width: 100%;
-        }
-
-        th, td {
-            border: 1px,solid,black;
-            padding: 1px;
-            text-align: left;
-        }
-#table-2{
-	td{
-		height:10px;
-	}
+    border-collapse: collapse;
+    border: 1px solid black;
+    width: 100%;
+    margin: 0 auto;
 }
 
-        .middle {
-            margin: 0 auto;
-        }
+th, td {
+    border: 1px solid black;
+    padding: 1px;
+    text-align: left;
+}
 
+/* Table 1 Specific Styling */
 #table-1 td:first-child {
-            text-align: left;
-        }
+    text-align: left;
+}
 
-        #table-1 td:nth-child(2) {
-            text-align: center;
-        }
+#table-1 td:nth-child(2) {
+    text-align: center;
+}
 
-        #table-1 td:last-child {
-            text-align: right;
-        }
+#table-1 td:last-child {
+    text-align: right;
+}
 
-        /* Set each column to be equally spaced */
-        #table-3 td {
-            width: 33.33%;
-        }
+/* Table 2 Specific Styling */
+#table-2 td {
+    height: 30px;
+}
 
-        /* Ensure the image fills the cell */
-        #t-image img {
-            width: 100%;
-            height: auto;
-            display: block;
-        }
+/* Table 3 Specific Styling */
+#table-3 td {
+    width: 33.33%;
+}
 
-        /* Background color styling */
-        .green {
-            background-color: green;
-					height:10px;
-        }
+#t-image img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
 
-        .blue {
-            background-color: blue;
-			height:10px;
+/* Background color styling */
+.green {
+    background-color: green;
+    height: 30px;
+}
 
-        }
+.blue {
+    background-color: blue;
+    height: 30px;
+}
 
-        /* Center alignment for heading */
-        h1 {
-            text-align: center;
-        }
+/* Center alignment for heading */
+h1 {
+    text-align: center;
+}
+
+/* Style for centering tables */
+.middle {
+    margin: 0 auto;
+}
