--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,18 @@
-/* Style for the form container */
+/* Table Borders */
 table {
     border-collapse: collapse;
-    border: 1px solid black;
+    border: 1px solid black;  /* Corrected */
     width: 100%;
     margin: 0 auto;
 }
 
 th, td {
-    border: 1px solid black;
+    border: 1px solid black;  /* Corrected */
     padding: 1px;
     text-align: left;
 }
 
-/* Table 1 Specific Styling */
+/* Specific alignment for table-1 */
 #table-1 td:first-child {
     text-align: left;
 }
@@ -25,39 +25,28 @@ th, td {
     text-align: right;
 }
 
-/* Table 2 Specific Styling */
-#table-2 td {
-    height: 30px;
-}
-
-/* Table 3 Specific Styling */
-#table-3 td {
-    width: 33.33%;
-}
-
+/* Specific styling for table-3 */
 #t-image img {
     width: 100%;
     height: auto;
     display: block;
 }
 
-/* Background color styling */
+/* Background color classes */
 .green {
     background-color: green;
-    height: 30px;
 }
 
 .blue {
     background-color: blue;
-    height: 30px;
 }
 
-/* Center alignment for heading */
+/* Centering the heading */
 h1 {
     text-align: center;
 }
 
-/* Style for centering tables */
+/* Centering the tables */
 .middle {
     margin: 0 auto;
 }
