--- a/styles.css
+++ b/styles.css
@@ -1,52 +1,38 @@
-/* Table Borders */
-table {
-    border-collapse: collapse;
-    border: 1px solid black;  /* Corrected */
-    width: 100%;
-    margin: 0 auto;
+table,
+tr,
+td {
+  border: 1px solid black;
+  border-collapse: collapse;
+  word-spacing: 1px;
+  width: 100%;
+  height: 15px;
+  table-layout: fixed;
 }
 
-th, td {
-    border: 1px solid black;  /* Corrected */
-    padding: 1px;
-    text-align: left;
+td {
+  padding: 1px;
 }
 
-/* Specific alignment for table-1 */
-#table-1 td:first-child {
-    text-align: left;
+#center-aligned {
+  text-align: center;
 }
 
-#table-1 td:nth-child(2) {
-    text-align: center;
+#t-image {
+  text-align: center;
 }
 
-#table-1 td:last-child {
-    text-align: right;
+#bg-green {
+  background-color: green;
 }
 
-/* Specific styling for table-3 */
-#t-image img {
-    width: 100%;
-    height: auto;
-    display: block;
+#bg-blue {
+  background-color: blue;
 }
 
-/* Background color classes */
-.green {
-    background-color: green;
+.center {
+  text-align: center;
 }
 
-.blue {
-    background-color: blue;
-}
-
-/* Centering the heading */
-h1 {
-    text-align: center;
-}
-
-/* Centering the tables */
-.middle {
-    margin: 0 auto;
+.right {
+  text-align: right;
 }
